--- a/linkedassignment-main/myapp/src/App.css
+++ b/linkedassignment-main/myapp/src/App.css
@@ -2,7 +2,7 @@
   height: 50vh;
 }
 .btn{
-  padding: 10px;
+  padding: 15px;
   border-radius: 10px;
   border-width: 0px;
   width: 15vw;
@@ -12,6 +12,7 @@
 
 .btn:hover{
   background-color: pink;
+  font-weight: bold;
 }
 
 .card{
@@ -24,7 +25,7 @@
   font-weight: bold;
   margin: 20px;
   margin-top: 40px;
-  font-size: 20px;
+  font-size: 15px;
 }
 @media screen and (min-width: 640px){
    
@@ -33,5 +34,8 @@
   }
   .btn{
     width: 10vw;
+  }
+  .text{
+    font-size: 40px;
   }
 }
